[package]
name = "felix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitcoin = "0.32.2"
bitcoincore-rpc = "0.19.0"
ciborium = "0.2.2"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.22"
plotters = "0.3.6"
plotters-backend = "0.3.6"
sled = "0.34.7"
